some fixes with Game of Thrones

--- a/thrones-landing/index.html
+++ b/thrones-landing/index.html
@@ -12,7 +12,7 @@
     <body>
         <main>
         <section class="left-section">
-            <img src="source/images/maxresdefault.jpg" alt="Game of Thrones">
+            <!-- <img src="source/images/maxresdefault.jpg" alt="Game of Thrones"> -->
         </section>
         <section class="right-section">
             <div class="reg_wrapper">
