--- a/thrones-landing/index.html
+++ b/thrones-landing/index.html
@@ -11,9 +11,7 @@
     </head>
     <body>
         <main>
-        <section class="left-section">
-            <!-- <img src="source/images/maxresdefault.jpg" alt="Game of Thrones"> -->
-        </section>
+        <section class="left-section"></section>
         <section class="right-section">
             <div class="reg_wrapper">
                 <h1>Game of Thrones</h1>
