some fixes before going at PC

--- a/task1/maket/3column-maket.html
+++ b/task1/maket/3column-maket.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="style.css">
         <header>header</header>
         <main>
-            <nav>Navigation</nav>
-            <content>
+            <nav class="paddings">Navigation</nav>
+            <content class="paddings">
                 <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate, cumque delectus!</p>
                 <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate, cumque delectus!</p>
                 <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate, cumque delectus!</p>
             </content>
-            <aside>Sidebar</aside>
+            <aside class="paddings">Sidebar</aside>
         </main>
-    <footer>footer</footer>
+    <footer class="paddings">footer</footer>
 </body>
 </html>
