--- a/task1/razminka/index.html
+++ b/task1/razminka/index.html
@@ -57,7 +57,7 @@
     **/
     .grid{
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: repeat(3, 1fr); /* review 1 - fixed*/
     }
   </style>
 </head>
