Marina fixes adds

--- a/task1/landing N++/index.html
+++ b/task1/landing N++/index.html
@@ -35,10 +35,11 @@
     <div class="app-review_right-side">
       <h1>Our avesome app is ready to use!</h1>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        Placeat nisi quod repellendus illo asperiores? Odit ratione amet pariatur voluptas facilis fuga ab.
+        Placeat nisi quod repellendus illo asperiores?
+        Odit ratione amet pariatur voluptas facilis fuga ab.
         Dolorum vitae aspernatur id asperiores error saepe harum!
       </p>
-      <div class="buy-now">Buy now!</div>
+      <div class="big_button"><a href="#buy_now">Buy now!</a></div>
     </div>
 
 
@@ -87,7 +88,8 @@
       <br>
       <textarea id="question" name="question" placeholder="Ask your question" style="height:200px"></textarea>
       <br>
-      <input type="submit" value="Send email!">
+      <input class="big_button" type="submit" value="Send email!">
+
     </form>
   </section>
 
