--- a/task1/landing N++/index.html
+++ b/task1/landing N++/index.html
@@ -90,6 +90,26 @@
       <br>
       <input class="big_button" type="submit" value="Send email!">
 
+      <input type="button">
+      <!-- <input type="checkbox">
+      <input type="color">
+      <input type="date">
+      <input type="datetime-local">
+      <input type="file">
+      <input type="hidden">
+      <input type="image">
+      <input type="month">
+      <input type="number">
+      <input type="password">
+      <input type="radio">
+      <input type="range">
+      <input type="reset">
+      <input type="search">
+      <input type="tel">
+      <input type="time">
+      <input type="url">
+      <input type="week"> -->
+
     </form>
   </section>
 
