--- a/task1/landing N++/index.html
+++ b/task1/landing N++/index.html
@@ -46,7 +46,9 @@
   </section>
   <section class="our-development">
     <div class="dev">
-      <div class="icon"><img src="images/icons/teg.svg" alt="teg" height="40" width="40"></div>
+      <div class="icon">
+        <img src="images/icons/teg.svg" alt="teg" height="40" width="40">
+      </div>
       <h3>Web development</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -56,7 +58,9 @@
       </p>
     </div>
     <div class="dev">
-      <div class="icon"><i class="fab fa-android fa-3x"></i></div>
+      <div class="icon">
+        <i class="fab fa-android fa-3x"></i>
+      </div>
       <h3>Mobile development</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -66,7 +70,9 @@
       </p>
     </div>
     <div class="dev">
-      <div class="icon"><i class="fas fa-cloud fa-3x"></i></div>
+      <div class="icon">
+        <i class="fas fa-cloud fa-3x"></i>
+      </div>
       <h3>Higthload</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -90,8 +96,8 @@
       <br>
       <input class="big_button" type="submit" value="Send email!">
 
-      <input type="button">
-      <!-- <input type="checkbox">
+      <!-- <input type="button">
+      <input type="checkbox">
       <input type="color">
       <input type="date">
       <input type="datetime-local">
