--- a/task1/maket/3column-maket.html
+++ b/task1/maket/3column-maket.html
@@ -1,24 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PS_1 part_2</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>PS_1 part_2</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <link rel="stylesheet" href="style.css">
-        <header>header</header>
-        <main>
-            <nav class="paddings">Navigation</nav>
-            <content class="paddings">
-                <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate, cumque delectus!</p>
-                <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate, cumque delectus!</p>
-                <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate, cumque delectus!</p>
-            </content>
-            <aside class="paddings">Sidebar</aside>
-        </main>
-    <footer class="paddings">footer</footer>
+  <header>header</header>
+  <main>
+    <nav class="paddings">Navigation</nav>
+    <content class="paddings">
+      <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae
+        adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate,
+        cumque delectus!</p>
+      <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae
+        adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate,
+        cumque delectus!</p>
+      <p>- Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam tenetur officia. Cum molestiae
+        adipisci deserunt labore, inventore provident neque eaque eligendi facere doloribus quia fuga nam voluptate,
+        cumque delectus!</p>
+    </content>
+    <aside class="paddings">Sidebar</aside>
+  </main>
+  <footer class="paddings">footer</footer>
 </body>
 </html>
