--- a/task2/razminka/index.html
+++ b/task2/razminka/index.html
@@ -6,15 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>razminka</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+   
 </head>
 <body>
     <div class="sum_of_numbers">
-        <form action="#">
-          input two numbers to:
-          <input type="text" id="sum_num_1" name="sum1" min="-100" max="100" maxlength="4"> + 
-          <input type="text" id="sum_num_2" name="sum2" maxlength="4">
+        <form action="#" id="sum">
+        Part 1: 
+        input two numbers:
+          <input type="text" id="sum_num_1" name="sum1" maxlength="4"> + 
+          <input type="text" id="sum_num_2" name="sum2" maxlength="4"> = <span id="sum_of_two" length="5"></span>
         </form>
-    </div>
-    
+        <div class="buttons_part_one">
+            <button onclick="sum_of_num()">calculate</button>
+            <button onclick="reset()">reset</button>
+        </div>
+    </div> 
+    <script src="warm_up.js"></script>
 </body>
 </html>
