forget what it was only half of the task. add sortBy. Finaly need to add filter by name

--- a/task2/static table/index.html
+++ b/task2/static table/index.html
@@ -26,7 +26,7 @@
             <div class="field">
               <p class="control">
                 <div class="select" style="width: 100%">
-                  <select placeholder="Filter by category" style="width: 100%">
+                  <select id="selectionList" placeholder="Filter by category" onchange="getSelectCategory(), tableShuffleBy('category')" style="width: 100%">
                     <option value="" selected>Filter by category</option>
                     <option value="supplies">Office supplies</option>
                     <option value="furniture">Furniture</option>
@@ -73,7 +73,7 @@
               <th></th>
               <th></th>
               <th>Total:</th>
-              <th>45$</th>
+              <th id="total">45$</th>
             </tr>
           </tfoot>
         </table>
