--- a/task3/index.html
+++ b/task3/index.html
@@ -8,7 +8,8 @@
     <title>PS3 Dropdown</title>
 </head>
 <body>
-    <ul class="dropdown"></ul>
+    <ul class="dropdownMenu">
+    </ul>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="./script/script.js"></script>
 </body>
