--- a/task2/razminka/index.html
+++ b/task2/razminka/index.html
@@ -18,7 +18,7 @@
     <form action="#" id="sum">
       <input type="text" id="sum_num_1" name="sum1" maxlength="4">
       <input type="text" id="sum_num_2" name="sum2" maxlength="4">
-      <span id="sum_of_two" length="5"></span>
+      <span id="sum_of_two"></span>
     </form>
       <div class="btn" onclick="sum_of_num()">calculate</div>
       <div class="btn" onclick="reset()">reset</div>
@@ -34,7 +34,6 @@
     <p>Fill this input with time in format hh:mm:ss.I'll transform your time value in to seconds</p>
     <input type="text" id="get_time" placeholder="hh:mm:ss"><span id="set_seconds"></span>
       <div class="btn" onclick="to_seconds_convert()">convert</div>
-    </div>
   </article>
 
   <article>
@@ -56,8 +55,7 @@
     <input type="number" id="get_chess_y" placeholder="Y axis">
     <div class="btn" id="btn_draw_board" onclick="draw_board()">create</div>
 
-    <h3>
-      <h3>Part 4.2</h3>
+    <h3>Part 4.2</h3>
       <p>Here is second chess board, but made by using div's</p>
       <input type="number" id="get_board_size" placeholder="input board size">
       <div class="btn" id="btn_div_board" onclick="draw_div_board()">create</div> 
