chane let to const, and some little code changes

--- a/task3/dropdown/index.html
+++ b/task3/dropdown/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/style.css">
-    <title>PS3 Dropdown</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="./style/style.css">
+  <title>PS3 Dropdown</title>
 </head>
+
 <body>
-    <ul class="dropdownMenu">
-    </ul>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="./script/script.js"></script>
+    <div class='dropdownMenuWrapper'>
+    <ul class="dropdownMenu"></ul>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="./script/script.js"></script>
 </body>
+
 </html>
