Fixes: add to the chess board 4.2 posibility to input data in format XxY, fix part5 and part 6 of razminka

--- a/task2/razminka/index.html
+++ b/task2/razminka/index.html
@@ -57,7 +57,7 @@
 
     <h3>Part 4.2</h3>
       <p>Here is second chess board, but made by using div's</p>
-      <input type="number" id="get_board_size" placeholder="input board size">
+      <input type="text" id="get_board_size" placeholder="input board size">
       <div class="btn" id="btn_div_board" onclick="draw_div_board()">create</div> 
       <div id="chess_board_div"></div>
   </article>
@@ -68,7 +68,6 @@
     <div class="row_wrapper">
 
       <div><textarea name="LinksBox" id="text_to_links" class="text_to_links" cols="32" rows="10"></textarea></div>
-      <div id="ip_output"></div>
       <div id="link_output"></div>
     </div>
   </article>
