add layout for login form, add an inclined shadow to the submit button

--- a/task5 Ajax/index.html
+++ b/task5 Ajax/index.html
@@ -23,12 +23,15 @@
   </div>
   <div class="chat-login-wrapper">
     <h1>Easy Chat</h1>
-    <form class="login-form" action="">
+    <form class="login-form" action="./yep.html">
       <label for="name">Enter your name</label>
       <input type="text" name="" id="name" placeholder="John Doe" autocomplete="off" required>
       <label for="pass">Enter your password</label>
       <input type="password" name="" id="pass" placeholder="•••••" required>
-      <input type="submit" value="Submit">
+      <div class="submit-wrapper">
+        <input type="submit" value="Submit">
+        <div class="shadow"></div>
+      </div>
     </form>
   </div>
 </body>
